plausible/plausible.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plausible
  namespace: production
  labels:
    app: plausible
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plausible
  template:
    metadata:
      labels:
        app: plausible
    spec:
      containers:
        - name: plausible
          image: ghcr.io/plausible/community-edition:v2.1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          command: ["/bin/sh"]
          args: ["-c", "sleep 10 && /entrypoint.sh db createdb && /entrypoint.sh db migrate && /entrypoint.sh run"]
---
apiVersion: v1
kind: Service
metadata:
  name: plausible
  namespace: production
  labels:
    app: plausible
spec:
  selector:
    app: plausible
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
