plausible/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plausible
  namespace: production
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`plausible.staging.imranr.dev`)
      kind: Rule
      services:
        - name: plausible
          port: 8000
  tls:
    secretName: imranr-dev-tls
