plausible/clickhouse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plausible-clickhouse
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plausible-clickhouse
  template:
    metadata:
      labels:
        app: plausible-clickhouse
    spec:
      securityContext:
        runAsGroup: $UID
        fsGroup: $UID
      containers:
        - name: plausible-clickhouse
          image: clickhouse/clickhouse-server:24.3.3.102-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 8123
          volumeMounts:
            - mountPath: /var/lib/clickhouse
              name: plausible-volume
              subPath: clickhouse/data
            - mountPath: /var/log/clickhouse-server
              name: plausible-volume
              subPath: clickhouse/logs
      volumes:
        - name: plausible-volume
          persistentVolumeClaim:
            claimName: plausible-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: plausible-clickhouse
  namespace: production
spec:
  type: ClusterIP
  ports:
    - port: 8123
  selector:
    app: plausible-clickhouse
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: plausible-clickhouse
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: plausible-clickhouse
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: plausible
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: plausible
